# mochi_donut

./: .dockerignore  .env.sample  .gitignore  API_README.md  CELERY_README.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPORT_PATH_ISSUES.md  IMPORT_VALIDATION_REPORT.md  Makefile  README.md  WAVE_1_TEST_4_REPORT.md  WEB_INTERFACE_README.md  alembic.ini  docker-compose.yml  env.config.sample  env.production.sample  env.sample  fly.toml  plan.md  pyproject.toml  pytest.ini  requirements.txt  run_app.py  spec.md  spec_feedback.md  test_app.py  test_imports.py  test_main_minimal.py  test_wave2_database.py  test_wave2_fastapi.py  test_wave2_imports.py  test_wave2_templates.py  todo.md
.beads/: issues.jsonl
.claude/commands/: chore.md  feature.md  prime.md
.github/workflows/: deploy.yml  test.yml
adws/: .env.sample  README.md  adw_prompt.py  adw_slash_command.py
adws/adw_modules/: agent.py
agents/1ab19b6b/step9-web-ui/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
agents/26aded52/step2-db/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
agents/6216880e/oneoff/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
agents/6f356baa/wave2-test3-templates/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
agents/7bcf3321/wave2-test1-db/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
agents/7d1522dd/step6-mcp-tools/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
agents/8a091a9d/step3-fastapi/: cc_final_object.json  cc_raw_output.json  cc_raw_output.jsonl  custom_summary_output.json
alembic/: env.py  script.py.mako
alembic/versions/: 2025_01_01_0000-001_initial_schema.py  2025_11_13_0700-ef3cc86afc6e_add_claude_sdk_fields.py  2025_11_13_1923-6a90d14519a1_add_prompt_status_and_fix_uuids.py
logs/: chat.json  enhanced_tool_use.json  hook_agent_completions.json  hook_final_quality_gates.json  notification.json  post_tool_use.json  pre_tool_use.json  stop.json  subagent_stop.json  user_prompt_submit.json
scripts/: start_celery.py
scripts/production/: backup.sh  deploy.sh  migrate.sh  validate.sh
specs/plans/: README.md
src/app/: main.py  main_updated.py
src/mochi_donut/: __init__.py  server.py
tests/: conftest.py  test_server.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_api_endpoints.py  test_content_workflow.py  test_external_services.py
tests/performance/: test_load.py
tests/unit/: test_agents.py  test_background.py  test_models.py  test_repositories.py  test_schemas.py  test_services.py
(+130 files in other folders)
