[project]
name = "mochi-donut"
version = "0.1.0"
description = "Spaced repetition learning integration with Claude Agent SDK"
readme = "README.md"
authors = [
    { name = "Joshua Oliphant", email = "joshua.oliphant@hey.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.36.0",

    # AI - Claude Agent SDK (replacing LangChain/LangGraph)
    "claude-agent-sdk>=0.1.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.43",
    "alembic>=1.16.5",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",

    # Data Validation
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",

    # Integrations
    "chromadb>=1.1.0",
    "httpx>=0.28.1",

    # Background Tasks
    "celery>=5.5.3",
    "redis>=6.4.0",

    # Web Interface
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",

    # Utilities
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",

    # Testing
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]

[project.scripts]
mochi-donut = "mochi_donut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
