[project]
name = "mochi-donut"
version = "0.2.0"
description = "MCP server for converting web content into Mochi flashcards"
readme = "README.md"
authors = [
    { name = "Joshua Oliphant", email = "joshua.oliphant@hey.com" }
]
requires-python = ">=3.11"
dependencies = [
    # MCP Server Framework
    "fastmcp>=2.0.0",

    # HTTP Client for JinaAI and Mochi APIs
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",  # For mocking httpx requests
]

[project.scripts]
mochi-donut = "mochi_donut:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mochi_donut"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.coverage.run]
branch = true
source = ["src/mochi_donut"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
